
   * Fully consistent API (defined and correct return values)

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer systems,
     etc).  sometimes it just fails period

=========================================================================
CHANGE LOG
=========================================================================

Changes up to 0.91

   * fixed raytrace border bug

   * fixed isosurface session save bug

   * added high-quality transparency support to "isosurface"s

   * greatly improved quality of surface output by "isosurface"

   * added support for Biosym/InsightII ASCII grid files

   * support for BRIX map format

   * fixed endianness problems with map files

   * pdb_use_ter_records: setting disables TER records in PDB output

   * improved default hydrogen atom ordering in PyMOL
   
   * fixed bug in hydrogen name conversion -- this may break some scripts : (

   * pdb_hetatm_sort: disable and sort to see cartoons for
     non-canonical PDB residues
   
   * retain_order: enable and sort to preserve input atom ordering.
      NOTE: may break some residue-based operations from working
   
   * Fixed processor mis-detection bug on Linux with certain P4s

   * PyMOL now building warning-free on VC++ warning level 3
      (catches sloppy precision handling and conversion)

Changes up to 0.90

   * Fixed IRIX and Linux minimal dependency Python launch context.

   * Added CPU detection for IRIX and Linux

   * Fixed ribbon color and rendering bugs

   * Put in checking for overly long selection words to avoid seg.fault.

   * Incorporated Tom Lee's density wizard changes.

   * TCL_LIBRARY not overridden by PyMOLWin.exe if it exists

   * Various NULL POINTER Errors removed

   * Memory debugger disabled by default to support multithreading

   * initial support for display lists -- not yet enabled by default

   * partial surface calculations are now much much faster
