@@ -17,7 +17,7 @@ for a in xrange(1,11):
    cmd.create("trg","ref",1,a)
    cmd.alter_state(a,"trg","x=x+random()/2")
    cmd.alter_state(a,"trg","y=y+random()/2")
-   cmd.alter_state(a,"trg","z=z+random()/2")
+   cmd.alter_state(a,"trg","z=z+random()/2",quiet=0)
 
 import time
 
